# lucia_controller

./: .gitignore  CMakeLists.txt  Lucia_lrf_front.txt  README.md  package.xml  robot-localization.md  ros-controller.md
bringup/config/: nav2_params.yaml
bringup/launch/: bringup.launch.py  discription.launch.py  nav.launch.py  robot.launch.py  robot_LRF.launch
bringup/map/: map.yaml
config/: ekf_odom.yaml  velocity_smoother.yaml
description/ros2_control/: gazebo_LiDAR_macro.xacro  gazebo_diffjoint_macro.xacro  gazebo_material_macroxacro  joints_macro.xacro  material_colors.xacro  parts_macro.xacro  robot.ros2_control.xacro  robot_v05.xacro
description/urdf/: lucia.urdf  robot.urdf.xacro  robot_description.urdf.xacro
hardware/: controller.cpp  hardwareHandler.cpp  wheel_odometry.cpp
hardware/include/: controller.hpp
hardware/include/lucia_controller/: controller.hpp  hardwareHandler.hpp  wheel_odometry.hpp
hardware/include/robot_controller/: controller.hpp  hardwareHandler.hpp
include/lucia_controller/: diff_drive_controller.hpp  lucia.hpp  odometry.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lucia_controller/include/lucia_controller/lucia_controller/: hardwareHandler.hpp
install/lucia_controller/lib/lucia_controller/: lucia_controller  lucia_controller_node
install/lucia_controller/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: lucia_controller
install/lucia_controller/share/ament_index/resource_index/package_run_dependencies/: lucia_controller
install/lucia_controller/share/ament_index/resource_index/parent_prefix_path/: lucia_controller
install/lucia_controller/share/lucia_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  lucia_controller.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lucia_controller/share/lucia_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_lucia_controllerExport-debug.cmake  export_lucia_controllerExport-noconfig.cmake  export_lucia_controllerExport.cmake  lucia_controllerConfig-version.cmake  lucia_controllerConfig.cmake
install/lucia_controller/share/lucia_controller/config/: mapper_params_online_sync.yaml  nav2_params.yaml  robot_controllers.yaml
install/lucia_controller/share/lucia_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/lucia_controller/share/lucia_controller/launch/: nav.launch.py  robot.launch.py  robot_LRF.launch  slam.launch.py
install/lucia_controller/share/lucia_controller/map/: map.yaml
install/lucia_controller/share/lucia_controller/ros2_control/: robot.ros2_control.xacro
install/lucia_controller/share/lucia_controller/rviz/: nav.rviz  robot.rviz  slam.rviz
install/lucia_controller/share/lucia_controller/urdf/: robot.urdf.xacro  robot_description.urdf.xacro
install/lucia_controller/share/robot_controller/config/: nav2_params.yaml  robot_controllers.yaml
install/lucia_controller/share/robot_controller/launch/: robot.launch.py
install/lucia_controller/share/robot_controller/ros2_control/: robot.ros2_control.xacro
install/lucia_controller/share/robot_controller/rviz/: nav.rviz  slam.rviz
install/lucia_controller/share/robot_controller/urdf/: robot.urdf.xacro
launch/: bringup.launch.py  controller.launch.py  ekf_odom.launch.py  velocity_smoothing.launch.py
src/: controller.cpp  controller_ekf.cpp  main.cpp
