<?xml version="1.0"?>
<package format="3">
  <name>lucia_controller</name>
  <version>0.1.0</version>
  <description>Robot driver with external velocity smoothing (nav2_velocity_smoother)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>robot_localization</depend>

  <!-- YARP -->
  <depend>yarp</depend>

  <!-- 実行時に必要 (smoother は別ノード) -->
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>